When javafx is missing, try to locate it in known location and restart the launcher. Else display a better error message